; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_extent_bump_alloc.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_extent_bump_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i64, i64)* @base_extent_bump_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @base_extent_bump_alloc(i32* %0, i32* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call i8* @base_extent_bump_alloc_helper(i32* %11, i64* %10, i64 %12, i64 %13)
  store i8* %14, i8** %9, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @base_extent_bump_alloc_post(i32* %15, i32* %16, i64 %17, i8* %18, i64 %19)
  %21 = load i8*, i8** %9, align 8
  ret i8* %21
}

declare dso_local i8* @base_extent_bump_alloc_helper(i32*, i64*, i64, i64) #1

declare dso_local i32 @base_extent_bump_alloc_post(i32*, i32*, i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
